--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div class="text" style="display: {{ route == '' ? 'block' : 'none' }}">
+  <span>
+    ADMIRE THE ANIMATION
+  </span>
+</div>
 <div id="header">
   <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
     <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
@@ -5,54 +10,7 @@
     <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
   </svg>
 </div>
-<div id="menu">
-  <div id="hrefs">
-    <div
-      id="{{ href.name }}_link"
-      class="href {{ route?.startsWith(href.name) ? 'active': ''}}"
-      routerLink="/{{ href.link }}"
-      *ngFor="let href of hrefs">
-      <span>{{ href.name }}</span>
-    </div>
-  </div>
-  <div id="links">
-    <div
-      id="home"
-      class="href {{ route == '' ? 'active': ''}}"
-      routerLink="/">
-      <span>home&nbsp;<i class="fa fa-home"></i></span>
-    </div>
-    <div *ngIf="signedIn then Home else Log_In"></div>
-    <ng-template #Home>
-      <div
-        id="profile"
-        class="href {{ route == 'profile' ? 'active': ''}}"
-        routerLink="/profile">
-        <span>profile&nbsp;<i class="fa fa-user"></i></span>
-      </div>
-      <div
-        id="profile"
-        class="href"
-        (click)="exit()">
-        <span>exit&nbsp;<i class="fas fa-sign-out-alt"></i></span>
-      </div>
-    </ng-template>
-    <ng-template #Log_In>
-      <div
-        id="log_in"
-        class="href {{ route == 'log_in' ? 'active': ''}}"
-        routerLink="/log_in">
-        <span>log in&nbsp;<i class="fas fa-sign-in-alt"></i></span>
-      </div>
-      <div
-        id="sign_in"
-        class="href {{ route == 'sign_up' ? 'active': ''}}"
-        routerLink="/sign_up">
-        <span>sign up&nbsp;<i class="fas fa-sign-in-alt"></i></span>
-      </div>
-    </ng-template>
-  </div>
-</div>
+<app-menu route="{{ route }}"></app-menu>
 <div id="main">
   <router-outlet></router-outlet>
 </div>
