--- a/frontend/src/app/components/models/models.component.css
+++ b/frontend/src/app/components/models/models.component.css
@@ -52,3 +52,47 @@
 .model img {
   width: 20vw;
 }
+
+@media screen and (max-width: 600px) {
+  #models {
+    margin: 0;
+  }
+
+  #models_header {
+    width: 90vw;
+  }
+
+  #models_title {
+    font-size: 28px;
+  }
+
+  #models_content {
+    width: 90vw;
+  }
+
+  .model {
+    width: 90vw;
+    font-size: 24px;
+    margin-top: 3vh;
+  }
+
+  .model:nth-child(even) .model-content {
+    flex-direction: column;
+    text-align: left;
+  }
+
+  .model-content {
+    flex-direction: column;
+    align-items: center;
+    width: 90vw;
+    font-size: 20px;
+  }
+
+  .model-space {
+    display: none;
+  }
+
+  .model img {
+    width: 80vw;
+  }
+}
