--- a/frontend/src/app/components/trends/decades/decades.component.css
+++ b/frontend/src/app/components/trends/decades/decades.component.css
@@ -28,7 +28,6 @@
   color: var(--bs-primary);
 }
 
-
 #decades_links {
   width: 12vw;
   background-color: whitesmoke;
@@ -130,4 +129,83 @@
 
 #decades_content img {
   width: 30vw;
+}
+
+@media screen and (max-width: 600px) {
+  #decades {
+    margin: 0;
+  }
+
+  #decades_header {
+    flex-direction: column;
+    width: 90vw;
+    font-size: 24px;
+  }
+
+  #decades_title {
+    width: 90vw;
+  }
+
+  #years_link {
+    margin: 2vh 0;
+    font-size: 22px;
+  }
+
+  #years_link span {
+    color: var(--bs-primary);
+    font-size: 22px;
+  }
+
+  #decades_links {
+    width: 90vw;
+    font-size: 20px;
+    padding-bottom: 0.5vh;
+  }
+
+  #decades_content {
+    flex-direction: column;
+    align-items: center;
+    width: 90vw;
+    margin-top: 3vh;
+    font-size: 20px;
+  }
+
+  #decade_text {
+    width: 90vw;
+  }
+
+  #decade_content {
+    text-align: justify;
+    width: 90vw;
+  }
+
+  #decade_description a {
+    color: var(--bs-primary);
+    text-decoration: none;
+  }
+
+  #decade_colors {
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 90vw;
+    margin: 5vh 0;
+    gap: 2.5vh;
+  }
+
+  .color {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    word-wrap: break-word;
+    width: 40vw;
+    height: 40vw;
+    padding: 5vw;
+    border-radius: 5%;
+  }
+
+  #decades_content img {
+    width: 90vw;
+  }
 }
