added an app to backend for built frontend

--- a/frontend/src/app/components/trends/years/years.component.html
+++ b/frontend/src/app/components/trends/years/years.component.html
@@ -2,7 +2,7 @@
   <div id="years_header">
     <span id="years_title">Trends through the years</span>
     <span id="decades_link">
-      See also: <span routerLink="/trends/decades/2010">Trends through decades</span>
+      See also: <span routerLink="trends/decades/2010">Trends through decades</span>
     </span>
   </div>
   <div id="years_body">
