added built fronend to the backend's app

--- a/frontend/src/app/components/models/models.component.html
+++ b/frontend/src/app/components/models/models.component.html
@@ -12,7 +12,7 @@
           <span>{{ model.text }}</span>
         </div>
         <div class="model-space"></div>
-        <img src="assets/{{ model.name }}_model.png" alt="{{ model.name }} model">
+        <img src="static/assets/{{ model.name }}_model.png" alt="{{ model.name }} model">
       </div>
     </div>
   </div>
