--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -2,7 +2,7 @@
   <div id="profile_info">
     <div>
       <div id="profile_logo">
-        <img src="../../../assets/avatar.png" alt="avatar">
+        <img src="static/assets/avatar.png" alt="avatar">
       </div>
       <div id="profile_data">
         <div *ngIf="editing; then Edit else Data"></div>
