added ImageComponent for images and changed color container in trends/decades

--- a/frontend/src/app/components/models/models.component.html
+++ b/frontend/src/app/components/models/models.component.html
@@ -12,7 +12,7 @@
           <span>{{ model.text }}</span>
         </div>
         <div class="model-space"></div>
-        <img src="static/assets/{{ model.name }}_model.png" alt="{{ model.name }} model">
+        <app-image src="assets/{{ model.name }}_model.png" alt="{{ model.name }} model" [style]="{width: '20vw'}" widthSmall="80vw"></app-image>
       </div>
     </div>
   </div>
