--- a/backend/frontend/templates/index.html
+++ b/backend/frontend/templates/index.html
@@ -12,12 +12,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
-  <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-  <link rel="stylesheet" href="{% static 'styles.01b7c20514e2ed70a32d.css' %}" media="print" onload="this.media='all'"><noscript>
-    <link rel="stylesheet" href="{% static 'styles.01b7c20514e2ed70a32d.css' %}">
-  </noscript>
+  <link rel="stylesheet" href="{% static 'styles.01b7c20514e2ed70a32d.css' %}">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
   <div class="bg"></div>
   <div class="bg bg1"></div>
@@ -30,9 +27,6 @@
   <app-root></app-root>
   <script src="{% static 'runtime.01cf8f856f2b618ec8d0.js' %}" defer></script>
   <script src="{% static 'polyfills.baaf1e7ca0aa4e65d77a.js' %}" defer></script>
-  <script src="{% static 'main.2fdcedacdae85bf443c6.js' %}" defer></script>
-
-
+  <script src="{% static 'main.d6a1a0935f2ccad798bc.js' %}" defer></script>
 </body>
-
 </html>
